# datamaker-py

./: Dockerfile  README.md  basic.py  generate_from_id.py  llms.txt  pyproject.toml  pytest.ini
.github/workflows/: build.yaml  docker-build.yml  docker-publish.yaml  generate-autocomplete.yml  python-publish.yml
artifacts/: README.md  autocomplete-types.ts
examples/robot-framework/: DataMakerLibrary.py  registration_test.robot
scripts/: generate-autocomplete-artifact.py
src/: core.py  error.py  main.py  template.py
src/datamaker/: __init__.py  main.py  template.py
src/datamaker/routes/: __init__.py  api_keys.py  base.py  connections.py  custom_types.py  export_and_validation.py  folders_and_utils.py  generation.py  keymaps.py  projects.py  scenario_files.py  sets.py  teams.py  templates.py  users.py
tests/: README.md  __init__.py  conftest.py  test_integration.py  test_main.py  test_routes.py
tests/docs/: API_KEY_ERROR_LOGS.md  AUTHENTICATION_ANALYSIS.md  TEST_REPORT.md  TEST_RESULTS_AFTER_AUTH_FIX.md
tests/scripts/: demo.py  run_tests.py
