[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datamaker-py"
version = "0.8.1"
description = "The official Python library for the Automators DataMaker API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[tool.setuptools.packages.find]
where = ["src"]
